# multiplayer-arena-game

./: README.md  index.html  main.py  pyproject.toml
css/: game.css  leaderboard.css  lobby.css  styles.css
database/: mongo.py  sql.py
js/: game.js  leaderboard.js  lobby.js  login.js
public/: game.html  leaderboard.html  lobby.html  login.html
routes/: auth.py
utils/: cache.py  face_auth.py  scraper.py
websocket/: game.py  lobby.py
