[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "fastapi>=0.135.3",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.24",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "setuptools<71.0",
    "sink>=0.1.0b2",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
